<resources>
    <string name="app_name">STorM32 GUI </string>

    <string name="action_settings">Settings</string>

    <string name="one">ONE</string>
    <string name="eight">EIGHT</string>
    <string name="five">FIVE</string>
    <string name="four">FOUR</string>
    <string name="nine">NINE</string>
    <string name="seven">SEVEN</string>
    <string name="six">SIX</string>
    <string name="ten">TEN</string>
    <string name="three">THREE</string>
    <string name="two">TWO</string>
    <string name="title_activity_scrollable_tabs">STorM32 Android GUI</string>
    <string name="title_activity_simple_tabs">Simple Tabs</string>
    <string name="btn_simple_tabs">Simple Tabs</string>
    <string name="btn_scrollable_tabs">STorM32 Android GUI</string>
    <string name="btn_icon_text_tabs">Icon &amp; Text Tabs</string>
    <string name="btn_icon_tabs">Only Icon Tabs</string>
    <string name="btn_pinned_top_tabs">Pinned To Top Tabs</string>
    <string name="title_activity_icon_text_tabs">Icon and Text Tabs</string>
    <string name="title_activity_icon_tabs">Icon Tabs</string>
    <string name="btn_custom_icon_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_custom_view_icon_text_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_pinned_top_tabs">Pin Top Tabs</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_configure_gimbal1">ActivityConfigureGimbal1</string>
    <string name="save_options">Save Options</string>
    <string name="conn_status">Conn. status:</string>
    <string name="bt_test">BT-test</string>
    <string name="board_version">Board Version:</string>
    <string name="disconnect_bt">Disconnect BT</string>
    <string name="board_name">Board Name</string>
    <string name="detect_bt_devices">Detect BT devices</string>
    <string name="read_options">Read Options</string>
    <string name="read_usb_test">Read USB -test</string>
    <string name="save_to_eeprom">SAVE TO EEPROM</string>
    <string name="set_name">Set Name</string>
    <string name="soft_version_v">soft_version_v</string>
    <string name="textstatususb">textStatusUSB</string>


</resources>
