
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/textView_connection_connectionStatus"
            android:layout_row="3"
            android:layout_column="2" />

        <GridLayout
            android:layout_width="match_parent"
            tools:rowCount="5"
            android:layout_height="0dp"
            android:layout_weight="1.73">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnect_bt"
                android:id="@+id/connection_button_disconnectBT"
                android:layout_row="1"
                android:layout_column="0" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_options"
                android:id="@+id/connection_button_saveOptions"
                android:layout_row="1"
                android:layout_column="9" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_to_eeprom"
                android:id="@+id/connection_button_saveToEeprom"
                android:layout_row="2"
                android:layout_column="9" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_usb_test"
                android:id="@+id/connection_button_usb_connect"
                android:layout_row="2"
                android:layout_column="0" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_options"
                android:id="@+id/connection_button_readOptions"
                android:layout_row="0"
                android:layout_column="9" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Read version"
                android:id="@+id/connection_button_readVersion"
                android:layout_marginLeft="45dp"
                android:layout_marginStart="45dp"
                android:layout_row="4"
                android:layout_column="0" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detect_bt_devices"
                android:id="@+id/connection_button_detect_bt"
                android:layout_gravity="center_horizontal"
                android:layout_row="0"
                android:layout_column="0" />

        </GridLayout>


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:rowCount="4">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/board_version"
                android:id="@+id/textView17"
                android:layout_row="0"
                android:layout_column="0"
                android:background="#669e8f" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/conn_status"
                android:id="@+id/textView56"
                android:layout_row="0"
                android:layout_column="6"
                android:background="#76b7b8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/soft_version_v"
                android:id="@+id/textView_connection_software_version"
                android:layout_row="1"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/board_name"
                android:id="@+id/textView46"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:background="#99c3c0" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Version:"
                android:id="@+id/textView57"
                android:layout_row="1"
                android:layout_column="0"
                android:background="#335c51" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="board_version_v"
                android:id="@+id/textView_connection_board_version"
                android:layout_row="0"
                android:layout_column="2" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_connection_name"
                android:layout_row="2"
                android:layout_column="2"
                android:text="name_v"
                android:background="#9bcaf4"
                android:focusable="true"
                android:enabled="true"
                android:maxLines="1"
                android:inputType="" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_name"
                android:id="@+id/connection_button_setName"
                android:layout_row="2"
                android:layout_column="6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Conn. status:"
                android:id="@+id/textView50"
                android:layout_row="3"
                android:layout_column="0" />




        </GridLayout>

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textDebug" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textView_2_name"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_test"
            android:id="@+id/connection_button_btTest" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textView_2_rcvBt" />

        <TextView
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textStatus" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/textstatususb"
            android:id="@+id/textStatusUSB" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="soft_version_v"
            android:id="@+id/textInfo"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="soft_version_v"
            android:id="@+id/textInfoInterface"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="soft_version_v"
            android:id="@+id/textInfoEndPoint"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="soft_version_v"
            android:id="@+id/textDeviceName"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView_5_rollMotorVmax"
            android:contextClickable="true"
            android:editable="true"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded,TextViewEdits"
            android:maxLines="1" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spInterface"
            android:layout_gravity="center_horizontal"
            android:spinnerMode="dropdown" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spEndPoint"
            android:layout_gravity="center_horizontal"
            android:spinnerMode="dropdown" />

    </LinearLayout>

</ScrollView>